Updates from Overleaf

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -3,7 +3,7 @@
 
 
 
-
+% S1: Negative Hebbian Learning um Pattern zu vergessen, Alternative Cells
 
 
 \subsection{Multi-Modality}\seclbl{framework_multi_modality}
@@ -18,5 +18,4 @@ Different sensory systems could even have separate domain-specific \emph{S1} sta
 
 
 
- % TODO: see https://en.wikipedia.org/wiki/Two-streams_hypothesis#Dorsal_stream
  
