--- a/zotero.bib
+++ b/zotero.bib
@@ -1,4 +1,38 @@
 
+@article{grill-spector_human_2004,
+	title = {The human visual cortex},
+	volume = {27},
+	issn = {0147-006X, 1545-4126},
+	url = {https://www.annualreviews.org/doi/10.1146/annurev.neuro.27.070203.144220},
+	doi = {10.1146/annurev.neuro.27.070203.144220},
+	abstract = {▪ Abstract  The discovery and analysis of cortical visual areas is a major accomplishment of visual neuroscience. In the past decade the use of noninvasive functional imaging, particularly functional magnetic resonance imaging (fMRI), has dramatically increased our detailed knowledge of the functional organization of the human visual cortex and its relation to visual perception. The fMRI method offers a major advantage over other techniques applied in neuroscience by providing a large-scale neuroanatomical perspective that stems from its ability to image the entire brain essentially at once. This bird's eye view has the potential to reveal large-scale principles within the very complex plethora of visual areas. Thus, it could arrange the entire constellation of human visual areas in a unified functional organizational framework. Here we review recent findings and methods employed to uncover the functional properties of the human visual cortex focusing on two themes: functional specialization and hierarchical processing.},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-08},
+	journal = {Annual Review of Neuroscience},
+	author = {Grill-Spector, Kalanit and Malach, Rafael},
+	month = jul,
+	year = {2004},
+	pages = {649--677},
+}
+
+@article{colby_space_1999,
+	title = {Space and attention in parietal cortex},
+	volume = {22},
+	issn = {0147-006X, 1545-4126},
+	url = {https://www.annualreviews.org/doi/10.1146/annurev.neuro.22.1.319},
+	doi = {10.1146/annurev.neuro.22.1.319},
+	abstract = {▪ Abstract  The space around us is represented not once but many times in parietal cortex. These multiple representations encode locations and objects of interest in several egocentric reference frames. Stimulus representations are transformed from the coordinates of receptor surfaces, such as the retina or the cochlea, into the coordinates of effectors, such as the eye, head, or hand. The transformation is accomplished by dynamic updating of spatial representations in conjunction with voluntary movements. This direct sensory-to-motor coordinate transformation obviates the need for a single representation of space in environmental coordinates. In addition to representing object locations in motoric coordinates, parietal neurons exhibit strong modulation by attention. Both top-down and bottom-up mechanisms of attention contribute to the enhancement of visual responses. The saliance of a stimulus is the primary factor in determining the neural response to it. Although parietal neurons represent objects in motor coordinates, visual responses are independent of the intention to perform specific motor acts.},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-15},
+	journal = {Annual Review of Neuroscience},
+	author = {Colby, Carol L. and Goldberg, Michael E.},
+	month = mar,
+	year = {1999},
+	pages = {319--349},
+}
+
 @article{anderson_shifter_1987,
 	title = {Shifter circuits: a computational strategy for dynamic aspects of visual processing.},
 	volume = {84},
@@ -507,23 +541,6 @@ Version Number: 2},
 	month = mar,
 	year = {2003},
 	pages = {219--229},
-}
-
-@article{grill-spector_human_2004,
-	title = {{THE} {HUMAN} {VISUAL} {CORTEX}},
-	volume = {27},
-	issn = {0147-006X, 1545-4126},
-	url = {https://www.annualreviews.org/doi/10.1146/annurev.neuro.27.070203.144220},
-	doi = {10.1146/annurev.neuro.27.070203.144220},
-	abstract = {▪ Abstract  The discovery and analysis of cortical visual areas is a major accomplishment of visual neuroscience. In the past decade the use of noninvasive functional imaging, particularly functional magnetic resonance imaging (fMRI), has dramatically increased our detailed knowledge of the functional organization of the human visual cortex and its relation to visual perception. The fMRI method offers a major advantage over other techniques applied in neuroscience by providing a large-scale neuroanatomical perspective that stems from its ability to image the entire brain essentially at once. This bird's eye view has the potential to reveal large-scale principles within the very complex plethora of visual areas. Thus, it could arrange the entire constellation of human visual areas in a unified functional organizational framework. Here we review recent findings and methods employed to uncover the functional properties of the human visual cortex focusing on two themes: functional specialization and hierarchical processing.},
-	language = {en},
-	number = {1},
-	urldate = {2023-07-08},
-	journal = {Annual Review of Neuroscience},
-	author = {Grill-Spector, Kalanit and Malach, Rafael},
-	month = jul,
-	year = {2004},
-	pages = {649--677},
 }
 
 @article{li_interpretable_2022,
