Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -60,12 +60,12 @@
 % Citation style
 
 % Format for bibliography
-\DeclareFieldFormat{title}{\textit{#1}}
-\DeclareFieldFormat[book]{title}{\textit{#1}}
+%\DeclareFieldFormat{title}{\textit{#1}}
+%\DeclareFieldFormat[book]{title}{\textit{#1}}
 
 % Format for citations
-\DeclareFieldFormat{citetitle}{\textit{#1}}
-\DeclareFieldFormat[book]{citetitle}{\textit{#1}} 
+%\DeclareFieldFormat{citetitle}{\textit{#1}}
+%\DeclareFieldFormat[book]{citetitle}{\textit{#1}} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -201,8 +201,9 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\defbibnote{bibnote}{Here is the list of references in citation order.\par\bigskip}
-\printbibliography[heading=bibintoc, title=Bibliography, prenote=bibnote]
+%\defbibnote{bibnote}{Here is the list of references in citation order.\par\bigskip}
+%\printbibliography[heading=bibintoc, title=Bibliography, prenote=bibnote]
+\printbibliography[heading=bibintoc, title=Bibliography]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
