--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,7 +1,9 @@
 
+\section{Discussion}
 
 
 
+\section{Future Work}
 
 % S1: Negative Hebbian Learning um Pattern zu vergessen, Alternative Cells
 
@@ -17,5 +19,28 @@ Different sensory systems could even have separate domain-specific \emph{S1} sta
 
 
 
+\subsection{Alternative Cells in \emph{S1}}
+Hemmung zwischen Output Channels als Competition
 
- 
+Competition: Welcher Channel passt am besten zu den Daten
+
+
+Schwer umzusetzen: Zu Beginn alle identisch, Symmetry muss gebrochen werden (Gesetzt der grossen Zahlen -> nur Durchschnitt reicht nicht)
+
+
+Competition nur nötig, wenn mehrere Channels aktiv sind
+
+
+\subsection{Negative Hebbian Learning in \emph{S1}}
+
+
+Was wenn falsche Daten / Statistiken gelernt werden -> Vergessen mit Negative Hebbian Learning
+
+Auch für Alternative Zellen hilfreich (z.B. Zellspaltung, dann spezialisiert sich jede Zelle auf etwas)
+
+ Challenge: Wenn an gewissen Stellen negative Correlation dominiert
+
+
+\subsection{Leverage Multiple Views}
+
+
