--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -44,3 +44,6 @@ Auch für Alternative Zellen hilfreich (z.B. Zellspaltung, dann spezialisiert si
 \subsection{Leverage Multiple Views}
 
 
+\subsection{Refine \emph{S2}}
+
+S2 ist weniger ausgearbeitet da weniger Experimente durchgeführt. S1 konnte mit experimenten laufend verfeinert werden, dies muss für S2 noch gemacht werden.
