--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -11,7 +11,7 @@ While this view may seem extreme, it shows that the learning algorithm of such s
 Some of the most critical limitations of deep learning systems are discussed in \secref{limitationsDL}.
 To overcome these challenges, researchers have proposed diverse methods and approaches \cite{long_survey_2022, sager_unsupervised_2022, yarats_improving_2021}. Despite these efforts, progress has been moderate, primarily focusing on mitigating the symptoms rather than addressing the core issues.
 
-This thesis introduces a novel learning framework inspired by neuroscience to address the core issues inherent in deep learning systems. Inspired by the human brain's remarkable learning capabilities, which surpass deep learning's limitations, this research aims to integrate neuroscientific insights into a learning framework. It seeks to overcome existing limitations and bridge the gap between artificial and biological intelligence. The thesis draws significant inspiration from the ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} and provides a concrete manifestation of the theory within the framework. By anchoring the theoretical concepts in a concrete framework and exemplifying its learning capabilities through practical implementation, this thesis contributes to a comprehensive understanding and application of the principles of the theory.
+This thesis introduces a novel learning framework inspired by neuroscience to address the core issues inherent in deep learning systems. Inspired by the human brain's remarkable learning capabilities, which surpass deep learning's limitations, this research aims to integrate neuroscientific insights into a learning framework. It seeks to overcome existing limitations and bridge the gap between artificial and biological intelligence. The thesis draws significant inspiration from the ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} \citeay{von_der_malsburg_theory_2022} \citeauthor*{von_der_malsburg_theory_2022} \citeauthor{von_der_malsburg_theory_2022} and provides a concrete manifestation of the theory within the framework. By anchoring the theoretical concepts in a concrete framework and exemplifying its learning capabilities through practical implementation, this thesis contributes to a comprehensive understanding and application of the principles of the theory.
 
 This thesis lies at the intersection of deep learning and neurocomputing\sidenote{Neurocomputing is a subfield of neuroscience that focuses on implementing biologically plausible learning algorithms.}. It adopts many learning paradigms from neurocomputing, leveraging the capabilities of biologically inspired algorithms. At the same time, the computational efficiency of deep learning algorithms is being exploited. By merging the strengths of both fields, this work aims to develop a hybrid approach that combines the biological plausibility of neurocomputing with the computational efficiency of deep learning to foster advances in learning algorithms.
 
